--- a/src/templates/includes/meta-favicon.njk
+++ b/src/templates/includes/meta-favicon.njk
@@ -1,7 +1,7 @@
 <!-- Manifest -->
 <link rel="manifest" href="/site.webmanifest">
 <!-- iOS Web Applications -->
-<meta name="apple-mobile-web-app-title" content="{{ metadata.short_title }}">
+<meta name="apple-mobile-web-app-title" content="{{ config.shortTitle }}">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <!--  180 x 180 apple-touch-icon -->
@@ -9,4 +9,4 @@
 <!-- favicon -->
 <link rel="shortcut icon" href="/assets/img/logo/favicon32.png">
 <!-- theme-color -->
-<meta name="theme-color" content="{{ metadata.site.theme }}">
+<meta name="theme-color" content="{{ config.site.theme }}">
