--- a/src/templates/includes/meta-verify.njk
+++ b/src/templates/includes/meta-verify.njk
@@ -1,4 +1,4 @@
 <!-- Verify search engine -->
-<meta name="google-site-verification" content="{{ metadata.verify.google }}">
-<meta name="msvalidate.01" content="{{ metadata.verify.bing }}">
-<meta name="yandex-verification" content="{{ metadata.verify.yandex }}">
+<meta name="google-site-verification" content="{{ config.verify.google }}">
+<meta name="msvalidate.01" content="{{ config.verify.bing }}">
+<meta name="yandex-verification" content="{{ config.verify.yandex }}">
