--- a/src/templates/includes/meta-facebook.njk
+++ b/src/templates/includes/meta-facebook.njk
@@ -1,3 +1,3 @@
 <!-- Facebook -->
-<meta property="fb:app_id" content="{{ metadata.facebook.app_id }}">
-<meta property="fb:pages" content="{{ metadata.facebook.pages }}">
+<meta property="fb:app_id" content="{{ config.facebook.appId }}">
+<meta property="fb:pages" content="{{ config.facebook.pages }}">
