--- a/src/templates/includes/meta-og.njk
+++ b/src/templates/includes/meta-og.njk
@@ -1,10 +1,10 @@
 <!-- Open Graph -->
-<meta property="og:title" content="{{ metadata.short_title }}">
+<meta property="og:title" content="{{ config.shortTitle }}">
 <meta property="og:type" content="website">
-<meta property="og:url" content="{{ metadata.url }}">
-<meta property="og:description" content="{{ metadata.description }}">
+<meta property="og:url" content="{{ config.url }}">
+<meta property="og:description" content="{{ config.description }}">
 <meta property="og:locale" content="en_US">
-<meta property="og:image" content="{{ metadata.url + metadata.ogImage }}">
+<meta property="og:image" content="{{ config.url + config.images }}">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
