--- a/src/templates/includes/meta-twitter.njk
+++ b/src/templates/includes/meta-twitter.njk
@@ -1,8 +1,8 @@
 <!-- Twitter card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="{{ metadata.twitter.site }}">
-<meta name="twitter:creator" content="{{ metadata.twitter.creator }}">
-<meta name="twitter:url" content="{{ metadata.url }}">
-<meta name="twitter:title" content="{{ metadata.short_title }}">
-<meta name="twitter:description" content="{{ metadata.description }}">
-<meta name="twitter:image" content="{{ metadata.url + metadata.ogImage }}">
+<meta name="twitter:site" content="{{ config.twitter.site }}">
+<meta name="twitter:creator" content="{{ config.twitter.creator }}">
+<meta name="twitter:url" content="{{ config.url }}">
+<meta name="twitter:title" content="{{ config.shortTitle }}">
+<meta name="twitter:description" content="{{ config.description }}">
+<meta name="twitter:image" content="{{ config.url + config.images }}">
