--- a/src/templates/includes/stylesheet.njk
+++ b/src/templates/includes/stylesheet.njk
@@ -1,10 +1,10 @@
 <!-- Google Fonts -->
-<link rel="stylesheet" href="{{ metadata.cdn.font }}">
+<link rel="stylesheet" href="{{ config.cdn.font }}">
 <!-- Material Design Icons (mdi) -->
-<link rel="stylesheet" href="/assets/css/{{ metadata.file_name.mdi }}.css">
+<link rel="stylesheet" href="/assets/css/{{ config.fileName.mdi }}.css">
 <!-- Style -->
 {% if mode == "production" %}
-<link rel="stylesheet" href="/assets/css/{{ css_name_prod }}">
+<link rel="stylesheet" href="/assets/css/{{ cssNameProd }}">
 {% else %}
-<link rel="stylesheet" href="/assets/css/{{ css_name_dev }}">
+<link rel="stylesheet" href="/assets/css/{{ cssNameDev }}">
 {% endif %}
