--- a/src/templates/includes/schema.njk
+++ b/src/templates/includes/schema.njk
@@ -1,5 +1,5 @@
 <script type="application/ld+json">
-{% minifyjson %}
+{% startMinifyJson %}
 {
   "@context": "https://schema.org",
   "@type": "Person",
@@ -11,6 +11,6 @@
     "{{ config.author.social.instagram }}"
   ]
 }
-{% endminifyjson %}
+{% endMinifyJson %}
 
 </script>
